# MlBackend

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
config/: nginx.conf
mldata/: .gitignore
mldata/train_data_100for/: config.cfg  meta.json
mldata/train_data_100for/ner/: model
mldata/train_data_100for/vocab/: strings.json
mldata/train_data_200for/ner/: model  moves
mldata/train_data_50for/ner/: model
src/: main.py
src/alembic/: env.py
src/app/: depends.py
src/app/routers/: __init__.py  mlmodel.py  personalml.py  publickml.py  system_sse.py
src/app/schemas/: mlmodel.py
src/app/tasks/: publickml.py
src/celery_config/: worker.py
src/core/celery/: worker.py
src/core/configuration/: __init__.py  configuration.py
src/core/database/: base.py  initiator.py  session.py
src/core/redis/: client.py
src/core/security/: codes.py  tokens.py
src/core/settings/: settings.py
src/core/sse/: manager.py  queue.py
src/core/utils/: system.py
src/locales/: tags_metadata.json
